# svsfunc

./: .flake8  .gitignore  .readthedocs.yaml  LICENSE  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  setup.cfg  setup.py
.github/workflows/: lint.yml
docs/: conf.py  index.rst  installation.rst  requirements.txt
docs/submodules/: bdmv.rst  encoder.rst  episode_info.rst  filterchain.rst  filtering.rst  indexer.rst  parse.rst  types.rst  utils.rst
docs/usage/: encoder.rst  episode_info.rst  filterchain.rst  filtering.rst  indexer.rst  parse.rst
examples/: example_encoder.py  example_indexer.py  example_parse.py  exemple_filterchain.py
stubs/vapoursynth/: __init__.pyi
svsfunc/: __init__.py  _metadata.py  bdmv.py  custom_types.py  denoise.py  encode.py  episode_info.py  filterchain.py  filtering.py  indexer.py  merge.py  parse.py  utils.py  waifu2x.py
svsfunc/encoder/: __init__.py  audio.py  base.py  chapters.py  encode.py  utils.py  video.py
svsfunc/indexer/: __init__.py  abstract.py  audio.py  episode_info.py  file_info.py  src_file.py  video.py
svsfunc/tooling/: __init__.py  audio.py  base.py  chapters.py  utils.py  video.py
