[project]
name = "svsfunc"
version = "1.3.0"
description = "Shigin's VapourSynth functions"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Shigin", email = "shigin.contact@gmail.com" }]

dependencies = ["pyparsebluray>=0.1.4", "pytimeconv>=0.0.2", "vapoursynth>=66", "vsjetpack>=0.5.3", "vsmuxtools>=0.3.0"]

[dependency-groups]
dev = ["mypy==1.17.1", "mypy-extensions==1.1.0", "ruff==0.9.4", "typing-extensions==4.14.1"]
docs = [
 "sphinx==6.2.1",
 "sphinx-autodoc-typehints==1.23.0",
 "sphinx-rtd-theme==1.2.0",
 "sphinx-toolbox==3.4.0",
 "sphinxcontrib-applehelp==1.0.4",
 "sphinxcontrib-devhelp==1.0.2",
 "sphinxcontrib-htmlhelp==2.0.1",
 "sphinxcontrib-jsmath==1.0.1",
 "sphinxcontrib-qthelp==1.0.3",
 "sphinxcontrib-serializinghtml==1.1.5",
]

[tool.mypy]

python_version = 3.12

mypy_path = "stubs"
follow_imports = "silent"

ignore_missing_imports = true

no_implicit_optional = true
strict_optional = true

disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

ignore_errors = false

allow_untyped_globals = false
allow_redefinition = false    # exclude = [".venv"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
